Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Thu Nov 19 19:00:55 2009 -0800

    A fiix, we shouldn't be depending on Universal::isa

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Wed Nov 18 11:13:46 2009 -0800

    Documentation improvements and add a new function: pretest_verification

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Fri Nov 13 22:21:43 2009 -0800

    Update METa.yml

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Fri Nov 13 22:20:00 2009 -0800

    Update CHANGES, Makefile and README with latest stuff

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Fri Nov 13 22:18:03 2009 -0800

    Now Test::System can connect with callbacks of TAP::Parser and
    TAP::Harness in order to know whats really happening and to build a hash
    with all this information so user can later process.

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Fri Nov 13 12:54:24 2009 -0800

    Update the CHANGES file and the README

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Fri Nov 13 12:53:29 2009 -0800

    Increment version (forgot a file)

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Fri Nov 13 12:13:30 2009 -0800

    Fixed some documentation issues and improved it.

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Fri Nov 13 02:21:48 2009 -0800

    Increment version since I did something stupid via PAUSE

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Fri Nov 13 02:19:12 2009 -0800


Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Fri Nov 13 02:12:45 2009 -0800

    ./Makefile.PL result

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Fri Nov 13 02:07:02 2009 -0800

    Let Test::System read a test plan from a YAML file and execute from
    there.
    
    Also drop some attributes from Test::System since they are not really
    needed or some are not that *required*

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Mon Nov 9 14:05:18 2009 -0800

    Make it more CPAN standard
