@@ -30,4 +30,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: http://github.com/pfischer/Test-System
-version: 0.09
+version: 0.10
